# git-project-doctor

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: phase-1-completion.md  phase-2-completion.md  phase-2-plan.md  safety.md
src/project_doctor/: __init__.py  cli.py  config.py  history.py  models.py  project_config.py
src/project_doctor/reporters/: codex_context_reporter.py  finding_summary.py  json_reporter.py  markdown_reporter.py  task_packet_reporter.py
src/project_doctor/scanners/: dependency_scanner.py  docs_scanner.py  git_scanner.py  secrets_scanner.py  structure_scanner.py  test_ci_scanner.py  todo_scanner.py
src/project_doctor/utils/: file_utils.py  path_utils.py
tests/: test_cli.py  test_dependency_scanner.py  test_docs_scanner.py  test_fixture_scans.py  test_git_scanner.py  test_history.py  test_json_reporter.py  test_markdown_reporter.py  test_project_config.py  test_public_content.py  test_task_packet_reporter.py  test_test_ci_scanner.py  test_todo_scanner.py
tests/fixtures/node_project/: README.md  package.json
tests/fixtures/node_project/.github/workflows/: ci.yml
tests/fixtures/node_project/src/: App.tsx
tests/fixtures/python_project/: README.md  pyproject.toml
tests/fixtures/python_project/.cache/: ignored.txt
tests/fixtures/python_project/__pycache__/: ignored.py
tests/fixtures/python_project/coverage/: ignored.txt
tests/fixtures/python_project/env/: ignored.py
tests/fixtures/python_project/reports/: ignored.md
tests/fixtures/python_project/src/: app.py
